--- a/bookshelf/templates/shared/base.html
+++ b/bookshelf/templates/shared/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Bookshelf</a>
+    <a class="navbar-brand" href="{% url 'index' %}">Bookshelf</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
             aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,12 +33,21 @@
             </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
+            {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="#">{{ user.username }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout user' %}">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login user' %}">Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Register</a>
             </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
