--- a/bookshelf/templates/accounts/login.html
+++ b/bookshelf/templates/accounts/login.html
@@ -1,15 +1,18 @@
 {% extends 'shared/base.html' %}
-{% block title %}Bookshelf | Login{% endblock %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% block title %}Login | Bookshelf{% endblock %}
 {% block site_content %}
-<h1>Login page</h1>
-<div class="row d-flex justify-content-center">
-    <form method="POST" action="{% url 'login user' %}">
-        <input type="hidden" name="return_url" value="{{ request.GET.next }}"/>
-        {% csrf_token %}
-        {{ login_form }}
-        <button class="btn btn-primary">Submit</button>
-        <p>or <a href="{% url 'register user' %}">register</a></p>
-    </form>
-
-</div>
+    <div class="col-md-6 text-center mx-auto">
+        <div class="text-center">
+            <form class="form-signin" method="POST" action="{% url 'login user' %}">
+                {% csrf_token %}
+                <img class="mb-4" src="{% static 'images/books_logo.png' %}" alt="Books" width="100" height="100">
+                <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
+                {{ login_form|crispy }}
+                <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Login</button>
+                <p class="mt-5 mb-3 text-muted">Bookshelf&reg; 2020</p>
+            </form>
+        </div>
+    </div>
 {% endblock %}
