--- a/bookshelf/templates/landing_page.html
+++ b/bookshelf/templates/landing_page.html
@@ -2,7 +2,7 @@
 
 {% block site_content %}
 
-<div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
+<div class="jumbotron p-4 p-md-5 text-white rounded bg-success">
     <div class="col-md-6 px-0">
         <h1 class="display-4 font-italic">Innovative way to share knowledge </h1>
         <p class="lead my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur deleniti dolore
