--- a/bookshelf/templates/shared/base.html
+++ b/bookshelf/templates/shared/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +12,7 @@
     <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/167/167756.svg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
@@ -51,7 +53,7 @@
         </ul>
     </div>
 </nav>
-<div class="container">
+<div class="container" id="site-content">
     {% block site_content %}
     {% endblock %}
 </div>
