--- a/bookshelf/templates/accounts/register.html
+++ b/bookshelf/templates/accounts/register.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% block title %}Register | Bookshelf{% endblock %}
+{% block site_content %}
+    <div class="col-md-6 text-center mx-auto">
+        <div class="text-center">
+            <form class="form-signin" method="POST" action="{% url 'register user' %}">
+                {% csrf_token %}
+                <img class="mb-4" src="{% static 'images/books_logo.png' %}" alt="Books" width="100" height="100">
+                <h1 class="h3 mb-3 font-weight-normal">Please Register</h1>
+                {{ user_form|crispy }}
+                <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Register</button>
+                <p class="mt-5 mb-3 text-muted">Bookshelf&reg; 2020</p>
+            </form>
+        </div>
+    </div>
+{% endblock %}
