--- a/bookshelf/templates/landing_page.html
+++ b/bookshelf/templates/landing_page.html
@@ -5,7 +5,8 @@
     <div class="jumbotron p-4 p-md-5 text-white rounded bg-success">
         <div class="col-md-6 px-0">
             <h1 class="display-4 font-italic">Innovative way to share knowledge</h1>
-            <p class="lead my-3">Find the book you want and contact the person who share it. Those are the 10 newest books in the website.</p>
+            <p class="lead my-3">Find the book you want and contact the person who share it. Those are the 10 newest
+                books in the website.</p>
             <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
         </div>
     </div>
@@ -22,8 +23,12 @@
                         <a href="#" class="stretched-link">See more details</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <a href=""><img src="{{ book.image.url }}" alt="{{ book.title }}" width="200" height="300"></a>
+                        {% if book.image %}
 
+                            <a href=""><img src="{{ book.image.url }}" alt="{{ book.title }}" width="200" height="300"></a>
+                            {% else %}
+                            <a href=""><img src="" alt="No image" width="200" height="300"></a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
