--- a/bookshelf/templates/shared/base.html
+++ b/bookshelf/templates/shared/base.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="">Categories</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Add book</a>
+                <a class="nav-link" href="{% url 'add book' %}">Add book</a>
             </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
