--- a/bookshelf/templates/shared/footer.html
+++ b/bookshelf/templates/shared/footer.html
@@ -1,3 +1,3 @@
-<div class="card-footer navbar-dark bg-dark footer fixed-bottom text-center">
+<div class="card-footer navbar-dark bg-dark footer fixed-bottom text-center" id="footer">
     <small class="text-light text-center">Bookshelf website</small>
 </div>
