--- a/bookshelf/templates/books/book_detail.html
+++ b/bookshelf/templates/books/book_detail.html
@@ -6,7 +6,27 @@
     <div class="col-md-6 text-center mx-auto">
 
         <div class="text-center">
+            {% if book.image %}
+                <img src="{{ book.image.url }}" alt="{{ book.title }}" width="200" height="300">
+            {% else %}
+                <img src="{% static 'images/no_image.jpg' %}" alt="No image" width="200" height="300">
+            {% endif %}
 
+            Title:{{ book.title }}
+            Author:{{ book.author }}
+            Page count:{{ book.page_count }}
+            Description:{{ book.description }}
+            {{ book.cover_type }}
+            {{ book.condition }}
+            {{ book.category }}
+            {% if can_edit %}
+                <a href="{% url 'edit book' book.pk %}" class="btn btn-lg btn-primary btn-block mt-2">Edit Book</a>
+            {% else %}
+                <p>Owner: {{ book.user }}</p>
+            {% endif %}
+            {% if can_edit %}
+                <a href="{% url 'delete book' book.pk %}" class="btn btn-lg btn-danger btn-block mt-2">Delete Book</a>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
