--- a/bookshelf/templates/shared/base.html
+++ b/bookshelf/templates/shared/base.html
@@ -37,7 +37,7 @@
         <ul class="navbar-nav justify-content-end">
             {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="#">{{ user.username }}</a>
+                <a class="nav-link" href="{% url 'user profile' user.pk %}">{{ user.username }}</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout user' %}">Logout</a>
