--- a/bookshelf/templates/shared/base.html
+++ b/bookshelf/templates/shared/base.html
@@ -25,10 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarsExample05">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="">Books</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">Categories</a>
+                <a class="nav-link" href="{% url 'list books' %}">Books</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'add book' %}">Add book</a>
