--- a/bookshelf/templates/books/list_books.html
+++ b/bookshelf/templates/books/list_books.html
@@ -1,5 +1,6 @@
 {% extends 'shared/base.html' %}
 {% load static %}
+{% block title %}All Books | Bookshelf{% endblock %}
 {% block site_content %}
 
 <div class="text-center">
