Added custom css and fix book_details template

--- a/bookshelf/static/css/style.css
+++ b/bookshelf/static/css/style.css
@@ -11,3 +11,13 @@ body {
 #footer {
     margin-top: 5rem;
 }
+
+.book-details {
+    font-size: 1.5rem;
+}
+
+.book-details-description {
+    font-size: 1.5rem;
+    margin: 1.5rem;
+    padding: 2rem;
+}
