--- a/bookshelf/templates/accounts/register.html
+++ b/bookshelf/templates/accounts/register.html
@@ -10,7 +10,7 @@
         <form class="form-signin" method="POST" action="{% url 'register user' %}">
             {% csrf_token %}
 
-            {{ user_form|crispy }}
+            {{ form|crispy }}
             <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Register</button>
             <p class="mt-5 mb-3 text-muted">Bookshelf&reg; 2020</p>
         </form>
